@@ -5,9 +5,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
 import lombok.extern.slf4j.Slf4j;
@@ -22,10 +22,14 @@ public class EndpointConfiguration {
     private final ApplicationProperties applicationProperties;
     private Map<String, Boolean> endpointStatuses = new ConcurrentHashMap<>();
     private Map<String, Set<String>> endpointGroups = new ConcurrentHashMap<>();
+    private final boolean runningProOrHigher;
 
     @Autowired
-    public EndpointConfiguration(ApplicationProperties applicationProperties) {
+    public EndpointConfiguration(
+            ApplicationProperties applicationProperties,
+            @Qualifier("runningProOrHigher") boolean runningProOrHigher) {
         this.applicationProperties = applicationProperties;
+        this.runningProOrHigher = runningProOrHigher;
         init();
         processEnvironmentConfigs();
     }
@@ -93,7 +97,7 @@ public class EndpointConfiguration {
                         // is false)
                         .map(Map.Entry::getKey)
                         .sorted()
-                        .collect(Collectors.toList());
+                        .toList();
 
         if (!disabledList.isEmpty()) {
             log.info(
@@ -280,6 +284,13 @@ public class EndpointConfiguration {
                     disableGroup(group.trim());
                 }
             }
+        }
+        if (!runningProOrHigher) {
+            disableGroup("enterprise");
+        }
+
+        if (!applicationProperties.getSystem().getEnableUrlToPDF()) {
+            disableEndpoint("url-to-pdf");
         }
     }
 
